factorio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: factorio        # < name of the deployment
  namespace: factorio   # < namespace where place the deployment and pods
  labels:
    app: factorio       # < label for tagging and reference
spec:
  replicas: 1           # < number of pods to deploy
  selector:
    matchLabels:
      app: factorio
  strategy:
    rollingUpdate:
      maxSurge: 0       # < The number of pods that can be created above the desired amount of pods during an update
      maxUnavailable: 1 # < The number of pods that can be unavailable during the update process
    type: RollingUpdate # < New pods are added gradually, and old pods are terminated gradually
  template:
    metadata:
      labels:
        app: factorio
    spec:
      volumes:
      - name: factorio-config  # < linkname of the volume for the pvc
        hostPath:
          path: /mnt/k3s/factorio-config # < pvc name we created in the previous yaml
      - name: heimdall-ssl
        secret:
          secretName: olympus-mangelschots-org-tls # < the name ssl certificate, will be created in the ingress yaml
      containers:
      - image: factoriotools/factorio # < the name of the docker image we will use
        name: factorio                      # < name of container
        imagePullPolicy: Always             # < always use the latest image when creating container/pod
        env:                                # < the environment variables required (see container documentation)
        - name: PGID
          value: "3000" # < group "user"
        - name: PUID
          value: "3000" # < user "docker"
        - name: TZ
          value: Europe/Brussels
        ports:                              # < the ports required (see container documentation)
         - containerPort: 34279
           name: fact-udp
           protocol: UDP
         - containerPort: 27015
           name: fact-tcp
           protocol: TCP
        volumeMounts:                       # < the volume mount in the container. Look at the relation volumelabel->pvc->pv
         - mountPath: /config               # < mount location in the container
           name: factorio-config               # < volumelabel configured earlier in the yaml file
           subPath: config                  # < subfolder in the nfs share to be mounted
