factorio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: factorio-service    # < name of the service
  namespace: factorio       # < namespace where place the deployment and pods
spec:
  selector:
    app: factorio           # < reference to the deployment (connects with this deployment)
  ports:
    - name: fact_udp
      protocol: UDP
      port: 34197
    - name: fact_TCP
      protocol: TCP
      port: 27015
  type: LoadBalancer
  loadBalancerIP: 172.21.3.14
