factorio/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: heimdall-ingress
  namespace: heimdall
  annotations: 
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`heimdall.olympus.mangelschots.org`)
      kind: Rule
      services:
        - name: heimdall-service
          port: 80
  tls:
    secretName: olympus-mangelschots-org-tls
